admission form pdf alignment fixed

--- a/css/all_forms.css
+++ b/css/all_forms.css
@@ -51,10 +51,10 @@ p, ol li, ul li
         margin-bottom: 5%;
     }
     .add-pages6 {
-        margin-bottom: 10%;
+        margin-bottom: 15%;
     }
     .add-pages7 {
-        margin-bottom: 13%;
+        margin-bottom: 16%;
     }
     .parent-pages1 {
         margin-bottom: 22%;
